<resources>
    <string name="app_name">MockApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="name_text">Swrajit Paul\'s</string>
    <string name="app">App</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">dsafhlshdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhhdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdsafhlshdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfdkjfhkjsdhfkjhsdkjfhkjsdhfjkhsdjkfhjsdhfjhs djfhjsdhfjhsdjfhjsdkhfjhsdjkfhjksdhfjkhsdkjfhjsdhfjksdhfjkhsjdkhfjkshdkfjhsjdhfhsddsfkjdshjkfhdjskhfjhsdjfhsjkdhfjhsdjfhkjsadhfjhsadjfhsjdkhfjshdjfhksdhkfjhskdhfjhsdajfkhsjdakhfkjhsadkjfhksjadhfjkshadfjkhsjkdhfjshadfkjhsakjdfhkjhejhjkhfjaehjhrehrjehwrjhehrjkhsekjhfsadjkhfjhdsajkfbdsjbvjbdvahgjkdshfjsdhfj</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="github">Github</string>
    <string name="about">About</string>
    <string name="resume">Resume</string>
    <string name="projects">Projects</string>
    <string name="welcome_to">Welcome to</string>
</resources>